Overflow issue fixed

--- a/styles.css
+++ b/styles.css
@@ -6,8 +6,10 @@ body {
     height: 100vh;
     font-family: Arial, sans-serif;
     background-color:  rgb(241 245 249);
-    padding: 0;
-    margin: 0;
+    margin-top: 50px;
+    padding: 20px; 
+    box-sizing: border-box; 
+    overflow: scroll;
 }
 
 #wheel {
